replace location of index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OLX PK</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./dist/style.css">
     <link rel="icon" href="https://www.shutterstock.com/image-vector/olx-app-website-logo-11-260nw-2359822187.jpg">
    
 </head>
@@ -599,6 +599,7 @@
 
     </div>
      <!-- footer ends-->
+
 </body>
 
 </html>
