trying make cards responsive

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     <!-- All categories section  Ends-->
 
     <!-- Main hero section starts -->
-    <div class="hero-section m-2 md:m-8">
+    <div class="hero-section  md:m-8">
         <div class="fashion">
             <div class="flex w-full justify-between">
                 <h1 class="font-bold text-lg  md:text-2xl">More in Fashion & Beauty</h1>
