--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
     <!-- All categories section  Ends-->
 
     <!-- Main hero section starts -->
-    <div class="hero-section   md:m-8">
-        <div class="fashion justify-center">
+    <div class="hero-section  md:m-8">
+        <div class="fashion justify-center mr-2 ml-2">
             <div class="flex w-full justify-between">
                 <h1 class="font-bold text-lg  md:text-2xl">More in Fashion & Beauty</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
@@ -185,7 +185,7 @@
 
         </div>
         <div class="Mobile mb-4 ">
-            <div class="flex justify-between">
+            <div class="flex justify-between mr-2 ml-2">
                 <h1 class="font-bold text-2xl">Mobiles</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
             </div>
@@ -235,7 +235,7 @@
 
         </div>
         <div class="Cars mb-4">
-            <div class="flex justify-between">
+            <div class="flex justify-between mr-2 ml-2">
                 <h1 class="font-bold text-2xl">Cars</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
             </div>
@@ -285,7 +285,7 @@
 
         </div>
         <div class="Bikes mb-4">
-            <div class="flex justify-between">
+            <div class="flex justify-between mr-2 ml-2">
                 <h1 class="font-bold text-2xl">Bikes & Motorcycles</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
             </div>
@@ -333,7 +333,7 @@
             </div>
         </div>
         <div class="Houses mb-4">
-            <div class="flex justify-between">
+            <div class="flex justify-between mr-2 ml-2">
                 <h1 class="font-bold text-2xl">Houses</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
             </div>
@@ -381,7 +381,7 @@
             </div>
         </div>
         <div class="Tablets mb-4">
-            <div class="flex justify-between">
+            <div class="flex justify-between mr-2 ml-2">
                 <h1 class="font-bold text-2xl">Video-Audio</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
             </div>
@@ -429,7 +429,7 @@
             </div>
         </div>
         <div class="Video-Audio mb-4">
-            <div class="flex justify-between">
+            <div class="flex justify-between mr-2 ml-2">
                 <h1 class="font-bold text-2xl">Tablets</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
             </div>
@@ -476,7 +476,7 @@
                 </div>
             </div>
         </div>
-        <div class="Jobs mb-4">
+        <div class="Jobs mb-4 mr-2 ml-2">
             <div class="flex justify-between">
                 <h1 class="font-bold text-2xl">Jobs</h1>
                 <p class="text-blue-500 text-lg flex">View more ></p>
