--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OLX PK</title>
     <link rel="stylesheet" href="./dist/style.css">
-    <link rel="icon" href="https://www.shutterstock.com/image-vector/olx-app-website-logo-11-260nw-2359822187.jpg">
+    <link rel="icon" href="./assts/favicon.png">
    
 </head>
 
@@ -70,7 +70,7 @@
 
     <!-- All categories section  starts-->
     <div class="catagories m-9 text-center md:text-start">
-        <h1 class="text-2xl font-bold">All categories</h1>
+        <h1 class="text-2xl  font-bold">All categories</h1>
         <div class="flex  flex-wrap mt-4 justify-center md:justify-start">
             <div class="w-20 mb-6 mr-6 flex flex-col items-center md:w-32">
                 <img class="w-24" src="../assts/mobile.png" alt="">
