--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img class="mr-4 md:mr-12" src="../assts/motors.svg" alt="">
             <img class="mr-4 md:mr-12" src="../assts/property.svg" alt="">
         </div>
-        <div class="hidden  md:flex flex-wrap items-center">
+        <div class="hidden  md:flex  items-center">
             <img class="h-12 w-12 mr-8 " src="../assts/olx small.svg" alt="">
             <div class="mr-8 flex rounded  justify-between bg-white items-center w-64 border-2 border-black p-2">
                 <img src="../assts/search.svg" alt="">
@@ -530,24 +530,24 @@
     <!-- Main hero section ends -->
 
      <!-- Advertise section starts -->
-    <div class="hidden md:flex justify-center mt-4  ">
+    <div class="hidden md:flex justify-center mt-4 w-full ">
         <img src="../assts/ad3.jpg" alt="">
     </div>
-    <div class="hidden md:flex border-b-2 border-slate-400 bg-[#F7F8F9] mt-4">
+    <div class="hidden w-full md:flex border-b-2 border-slate-400 bg-[#F7F8F9] mt-4">
         <div>
             <img src="../assts/a4.webp" alt="">
         </div>
-        <div class="flex flex-col justify-center w-96 p-4">
+        <div class="flex flex-col justify-center  p-4">
             <h1 class="font-extrabold text-3xl mt-4">TRY THE OLX APP</h1>
-            <p class="text-lg">Buy, sell and find just about anything using the app on your mobile.</p>
+            <p class="text-lg">Buy, sell and find just about anything using the <br> app on your mobile.</p>
         </div>
         <div class="mt-6 h-40 w-0.5 bg-slate-500"></div>
-        <div class="flex flex-col justify-center w-96 p-4">
+        <div class="flex flex-col justify-center  p-4">
             <h1 class="font-bold text-lg mt-4">GET YOUR APP TODAY</h1>
-            <div class="flex">
-                <img class="w-36" src="../assts/app.svg" alt="">
-                <img class="w-36" src="../assts/play.svg" alt="">
-                <img class="w-36" src="../assts/appgallery.svg" alt="">
+            <div class="flex ">
+                <img class=" w-32" src="../assts/app.svg" alt="">
+                <img class=" w-32" src="../assts/play.svg" alt="">
+                <img class=" w-32" src="../assts/appgallery.svg" alt="">
             </div>
         </div>
 
