--- a/index.html
+++ b/index.html
@@ -534,17 +534,17 @@
         <img src="../assts/ad3.jpg" alt="">
     </div>
     <div class="hidden w-full md:flex border-b-2 border-slate-400 bg-[#F7F8F9] mt-4">
-        <div>
-            <img src="../assts/a4.webp" alt="">
+        <div  class="flex">
+            <img class="h-full" src="../assts/a4.webp" alt="">
         </div>
         <div class="flex flex-col justify-center  p-4">
             <h1 class="font-extrabold text-3xl mt-4">TRY THE OLX APP</h1>
-            <p class="text-lg">Buy, sell and find just about anything using the <br> app on your mobile.</p>
+            <p class="text-sm">Buy, sell and find just about anything using the <br> app on your mobile.</p>
         </div>
         <div class="mt-6 h-40 w-0.5 bg-slate-500"></div>
         <div class="flex flex-col justify-center  p-4">
             <h1 class="font-bold text-lg mt-4">GET YOUR APP TODAY</h1>
-            <div class="flex ">
+            <div class="flex flex-wrap">
                 <img class=" w-32" src="../assts/app.svg" alt="">
                 <img class=" w-32" src="../assts/play.svg" alt="">
                 <img class=" w-32" src="../assts/appgallery.svg" alt="">
